# my-gui

./: .dir-locals.el  .gitignore  .gitmodules  .projectile  CMakeLists.txt  COPYING  README.org
cmake/: FindFFMPEG.cmake  FindSDL2Mixer.cmake  Findcairo.cmake  Findwebp.cmake
src/: CMakeLists.txt  aio.cc  aio.h  application.cc  application.h  application.hpp  async_task.cc  async_task.h  async_task.hpp  camera.hpp  canvas.h  codecvt.h  draw_list.cc  draw_list.h  env.h  event_bus.cc  event_bus.hpp  font_mgr.cc  font_mgr.h  layer.h  logger.cc  logger.h  main.cc  my_gui.h  my_gui.hpp  my_render.h  my_render.hpp  my_storage.hpp  render_device.h  render_server.cc  render_server.h  resource_mgr.cc  resource_mgr.h  resource_mgr.hpp  storage_mgr.cc  util.hpp  vulkan_buffer.hpp  vulkan_canvas.cc  vulkan_ctx.cc  vulkan_ctx.h  (+4 more)
src/core/: async_task.hpp  basic_service.hpp  config.hpp  coordination.hpp  core.hpp  event_bus.hpp  logger.cc  logger.hpp  object.hpp  signal.hpp  type.hpp
src/media/: audio_mgr.cc  audio_mgr.h  audio_mgr.hpp  avplayer.hpp
src/render/: canvas.cc  canvas.h  exception.hpp  node.hpp  node2d.hpp  node_view.hpp  render.hpp  render_service.cc  render_service.hpp  surface.hpp  type.hpp
src/render/back/: buffer.h  canvas.h  context.h  device.h  instance.h  queue.h  render_device.hpp
src/render/back/back2/: canvas.hpp
src/render/back/vulkan/: buffer.hpp  device.hpp  instance.hpp  queue.hpp
src/render/back/vulkan/back/: vulkan_buffer.hpp  vulkan_canvas.cc  vulkan_ctx.cc  vulkan_ctx.h  vulkan_instance.cc  vulkan_render_device.cc  vulkan_resource.h
src/render/back/vulkan/shaders/: canvas_shader.frag  shader.frag
src/render/window/: event.h  window_mgr.cc  window_mgr.h
src/storage/: archive.cc  archive.h  archive.hpp  blob.hpp  config.hpp  exception.hpp  font.hpp  font_mgr.cc  font_mgr.h  image.hpp  resource.cc  resource.hpp  resource_mgr.cc  resource_mgr.hpp  resource_service.hpp  storage.hpp  xp3_archive.cc
src/tool/: CMakeLists.txt
src/tool/test/: CMakeLists.txt  main.cc
src/tool/xp3_extract/: CMakeLists.txt  main.cc
src/util/: async_task.cc  async_task.hpp  avplayer.hpp  camera.hpp  event_bus.cc  event_bus.hpp  logger.cc  logger.h  queue.hpp  uuid.cc  uuid.hpp
src/vulkan/: MyVulkan.h  my_vulkan.cpp  singleton.h  vulkan_application.cpp  vulkan_application.h  vulkan_ext.h  vulkan_init.cpp  vulkan_instance.cpp  vulkan_instance.h  window.cpp  window.h
src/vulkan/shaders/: canvas_shader.frag  canvas_shader.vert  shader.frag  shader.vert
src/window/: config.hpp  event.hpp  exception.hpp  service.cc  service.hpp  window.hpp  window_instance.hpp  window_service.cc  window_service.hpp
src/window/sdl/: sdl_event.hpp  sdl_window_service.hpp
test/: CMakeLists.txt  test.cc
test/render/: node_test.cc
